--- a/src/main/resources/templates/admin/order_detail.html
+++ b/src/main/resources/templates/admin/order_detail.html
@@ -59,8 +59,8 @@
 	                        <div class="tab-pane" id="detail">
 	                            <table class="table table-bordered table-hover">
 	                            	<tr>
-	                                    <td><strong>Họ tên</strong></td>
-	                                    <td th:text="${order.name}"></td>
+	                                    <td width="30%"><strong>Họ tên</strong></td>
+	                                    <td width="70%" th:text="${order.name}"></td>
 	                                </tr>
 	                                <tr>
 	                                    <td><strong>Số điện thoại</strong></td>
