--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -16,14 +16,11 @@
 <link th:href="@{/webjars/metisMenu/1.1.3/metisMenu.min.css}" rel="stylesheet" />
 
 <!-- DataTables CSS -->
-<link th:href="@{/webjars/datatables/1.10.12/media/css/dataTables.bootstrap.css}" rel="stylesheet" />
-
-<!-- DataTables Responsive CSS -->
-<link th:href="@{/css/dataTables.responsive.css}" rel="stylesheet" />
+<link th:href="@{/webjars/datatables/1.10.15/media/css/dataTables.bootstrap.min.css}" rel="stylesheet" />
 
 <!-- Custom CSS -->
-<link th:href="@{/css/sb-admin-2.css}" rel="stylesheet" />
-<link th:href="@{/css/custom.css}" rel="stylesheet" />
+<link th:href="@{/css/admin/sb-admin-2.css}" rel="stylesheet" />
+<link th:href="@{/css/admin/custom.css}" rel="stylesheet" />
 
 <!-- Custom Fonts -->
 <link th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css" />
@@ -38,12 +35,11 @@
 <script th:src="@{/webjars/metisMenu/1.1.3/metisMenu.min.js}"></script>
 
  <!-- DataTables JavaScript -->
-<script th:src="@{/webjars/datatables/1.10.12/media/js/jquery.dataTables.min.js}"></script>
-<script th:src="@{/webjars/datatables/1.10.12/media/js/dataTables.bootstrap.min.js}"></script>
-<script th:src="@{/js/dataTables.responsive.js}"></script>
+<script th:src="@{/webjars/datatables/1.10.15/media/js/jquery.dataTables.min.js}"></script>
+<script th:src="@{/webjars/datatables/1.10.15/media/js/dataTables.bootstrap.min.js}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script th:src="@{/js/sb-admin-2.js}"></script>
+<script th:src="@{/js/admin/sb-admin-2.js}"></script>
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
